[#noissue] Clean up service registry: named DAO lookups, input validation, and Service.wellKnownServices